[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CryoToolBox"
version = "0.1.0"
description = "The python toolkit for cryogenic fluid and heat transfer analysis"
authors = [
    { name = "Sergey Koshelev", email = "srg.koshelev@proton.me" }
]
dependencies = [
    "CoolProp ~= 6.4",
    "Pint ~= 0.9",
    "Serialize ~= 0.1",
    "scipy ~= 1.2",
    "pyyaml ~= 5.0",
    "xlsxwriter ~= 3.0"
]

# Updated URLs
[project.urls]
"Homepage" = "https://srgkoshelev.github.io/CryoToolBox/"
"Documentation" = "https://srgkoshelev.github.io/CryoToolBox/"
"Source Code" = "https://github.com/srgkoshelev/CryoToolBox"

[project.classifiers]
"Development Status" = "3 - Alpha"
"Intended Audience" = "Science/Research"
"License" = "OSI Approved :: MIT License"
"Programming Language" = "Python :: 3"
"Topic" = "Scientific/Engineering"

# Package data
[tool.setuptools]
package_data = { "CryoToolBox" = ["*.ini", "*.txt", "*.yaml"] }
