[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CryoToolBox"
version = "0.1.0"
description = "The python toolkit for cryogenic fluid and heat transfer analysis"
authors = [
    { name = "Sergey Koshelev", email = "srg.koshelev@proton.me" }
]
license = {text = "MIT"}
dependencies = [
    "CoolProp ~= 6.4",
    "Pint ~= 0.9",
    "Serialize ~= 0.1",
    "scipy ~= 1.2",
    "pyyaml ~= 6.0",
    "xlsxwriter ~= 3.0"
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://srgkoshelev.github.io/CryoToolBox/"
Documentation = "https://srgkoshelev.github.io/CryoToolBox/"
Source = "https://github.com/srgkoshelev/CryoToolBox"

[tool.setuptools.package-data]
CryoToolBox = ["*.ini", "*.txt", "*.yaml"]